SERVER-13562 limit and skip stages no longer return eof without calling work() on the child

Doing so could cause missing results for a tailable cursor.

(cherry picked from commit 9d1f365bf8f0c3d6192284cffab4e3927722e17c)